src/grammar_gplParser.py
# Generated from D:/pythonProject/GPL\grammar_gpl.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class grammar_gplParser ( Parser ):

    grammarFileName = "grammar_gpl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'function'", "'var'", 
                     "'if'", "'else'", "'while'", "'for'", "'return'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'='", 
                     "'?'", "':'", "'.'", "'...'", "'->'", "'|'", "'^'", 
                     "'&'", "'<<'", "'>>'", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "COMMA", "SEMI", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EQ", "NE", "LT", "LE", 
                      "GT", "GE", "LAND", "LOR", "LNOT", "ASSIGN", "QUESTION", 
                      "COLON", "DOT", "ELLIPSIS", "ARROW", "BIT_OR", "BIT_XOR", 
                      "BIT_AND", "BIT_SHL", "BIT_SHR", "BIT_NOT", "IDENTIFIER", 
                      "INT", "FLOAT", "STRING", "ESC", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expression = 2
    RULE_assignmentExpression = 3
    RULE_ternaryExpression = 4
    RULE_logicalOrExpression = 5
    RULE_logicalAndExpression = 6
    RULE_bitwiseOrExpression = 7
    RULE_bitwiseXorExpression = 8
    RULE_bitwiseAndExpression = 9
    RULE_equalityExpression = 10
    RULE_relationalExpression = 11
    RULE_shiftExpression = 12
    RULE_additiveExpression = 13
    RULE_multiplicativeExpression = 14
    RULE_arrayExpression = 15
    RULE_objectExpression = 16
    RULE_objectPairList = 17
    RULE_objectPair = 18
    RULE_expressionList = 19
    RULE_unaryExpression = 20
    RULE_primaryExpression = 21
    RULE_literal = 22
    RULE_numericLiteral = 23
    RULE_stringLiteral = 24
    RULE_booleanLiteral = 25
    RULE_identifier = 26
    RULE_arguments = 27
    RULE_memberExpression = 28
    RULE_functionDeclaration = 29
    RULE_functionExpression = 30
    RULE_variableDeclaration = 31
    RULE_ifStatement = 32
    RULE_whileStatement = 33
    RULE_forStatement = 34
    RULE_returnStatement = 35
    RULE_blockStatement = 36

    ruleNames =  [ "program", "statement", "expression", "assignmentExpression", 
                   "ternaryExpression", "logicalOrExpression", "logicalAndExpression", 
                   "bitwiseOrExpression", "bitwiseXorExpression", "bitwiseAndExpression", 
                   "equalityExpression", "relationalExpression", "shiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "arrayExpression", 
                   "objectExpression", "objectPairList", "objectPair", "expressionList", 
                   "unaryExpression", "primaryExpression", "literal", "numericLiteral", 
                   "stringLiteral", "booleanLiteral", "identifier", "arguments", 
                   "memberExpression", "functionDeclaration", "functionExpression", 
                   "variableDeclaration", "ifStatement", "whileStatement", 
                   "forStatement", "returnStatement", "blockStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    LPAREN=10
    RPAREN=11
    LBRACE=12
    RBRACE=13
    LBRACK=14
    RBRACK=15
    COMMA=16
    SEMI=17
    ADD=18
    SUB=19
    MUL=20
    DIV=21
    MOD=22
    EQ=23
    NE=24
    LT=25
    LE=26
    GT=27
    GE=28
    LAND=29
    LOR=30
    LNOT=31
    ASSIGN=32
    QUESTION=33
    COLON=34
    DOT=35
    ELLIPSIS=36
    ARROW=37
    BIT_OR=38
    BIT_XOR=39
    BIT_AND=40
    BIT_SHL=41
    BIT_SHR=42
    BIT_NOT=43
    IDENTIFIER=44
    INT=45
    FLOAT=46
    STRING=47
    ESC=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammar_gplParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.StatementContext,i)


        def getRuleIndex(self):
            return grammar_gplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = grammar_gplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 272681031980990) != 0:
                self.state = 74
                self.statement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(grammar_gplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(grammar_gplParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(grammar_gplParser.SEMI, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(grammar_gplParser.VariableDeclarationContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(grammar_gplParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(grammar_gplParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(grammar_gplParser.ForStatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(grammar_gplParser.FunctionDeclarationContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(grammar_gplParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return grammar_gplParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = grammar_gplParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.expression()
                self.state = 83
                self.match(grammar_gplParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.variableDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.functionDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(grammar_gplParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return grammar_gplParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = grammar_gplParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.assignmentExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ternaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.TernaryExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.TernaryExpressionContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.ASSIGN)
            else:
                return self.getToken(grammar_gplParser.ASSIGN, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_assignmentExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentExpression" ):
                listener.enterAssignmentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentExpression" ):
                listener.exitAssignmentExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentExpression" ):
                return visitor.visitAssignmentExpression(self)
            else:
                return visitor.visitChildren(self)




    def assignmentExpression(self):

        localctx = grammar_gplParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignmentExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.ternaryExpression()
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self.match(grammar_gplParser.ASSIGN)
                    self.state = 97
                    self.ternaryExpression() 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TernaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpression(self):
            return self.getTypedRuleContext(grammar_gplParser.LogicalOrExpressionContext,0)


        def QUESTION(self):
            return self.getToken(grammar_gplParser.QUESTION, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.ExpressionContext,i)


        def COLON(self):
            return self.getToken(grammar_gplParser.COLON, 0)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_ternaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTernaryExpression" ):
                listener.enterTernaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTernaryExpression" ):
                listener.exitTernaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTernaryExpression" ):
                return visitor.visitTernaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def ternaryExpression(self):

        localctx = grammar_gplParser.TernaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ternaryExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.logicalOrExpression()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 104
                self.match(grammar_gplParser.QUESTION)
                self.state = 105
                self.expression()
                self.state = 106
                self.match(grammar_gplParser.COLON)
                self.state = 107
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.LogicalAndExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.LogicalAndExpressionContext,i)


        def LOR(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.LOR)
            else:
                return self.getToken(grammar_gplParser.LOR, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_logicalOrExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpression" ):
                listener.enterLogicalOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpression" ):
                listener.exitLogicalOrExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOrExpression" ):
                return visitor.visitLogicalOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalOrExpression(self):

        localctx = grammar_gplParser.LogicalOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logicalOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.logicalAndExpression()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 112
                self.match(grammar_gplParser.LOR)
                self.state = 113
                self.logicalAndExpression()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bitwiseOrExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.BitwiseOrExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.BitwiseOrExpressionContext,i)


        def LAND(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.LAND)
            else:
                return self.getToken(grammar_gplParser.LAND, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_logicalAndExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAndExpression" ):
                listener.enterLogicalAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAndExpression" ):
                listener.exitLogicalAndExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAndExpression" ):
                return visitor.visitLogicalAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalAndExpression(self):

        localctx = grammar_gplParser.LogicalAndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_logicalAndExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.bitwiseOrExpression()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 120
                self.match(grammar_gplParser.LAND)
                self.state = 121
                self.bitwiseOrExpression()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BitwiseOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bitwiseXorExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.BitwiseXorExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.BitwiseXorExpressionContext,i)


        def BIT_OR(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.BIT_OR)
            else:
                return self.getToken(grammar_gplParser.BIT_OR, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_bitwiseOrExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBitwiseOrExpression" ):
                listener.enterBitwiseOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBitwiseOrExpression" ):
                listener.exitBitwiseOrExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitwiseOrExpression" ):
                return visitor.visitBitwiseOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def bitwiseOrExpression(self):

        localctx = grammar_gplParser.BitwiseOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bitwiseOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.bitwiseXorExpression()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 128
                self.match(grammar_gplParser.BIT_OR)
                self.state = 129
                self.bitwiseXorExpression()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BitwiseXorExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bitwiseAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.BitwiseAndExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.BitwiseAndExpressionContext,i)


        def BIT_XOR(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.BIT_XOR)
            else:
                return self.getToken(grammar_gplParser.BIT_XOR, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_bitwiseXorExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBitwiseXorExpression" ):
                listener.enterBitwiseXorExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBitwiseXorExpression" ):
                listener.exitBitwiseXorExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitwiseXorExpression" ):
                return visitor.visitBitwiseXorExpression(self)
            else:
                return visitor.visitChildren(self)




    def bitwiseXorExpression(self):

        localctx = grammar_gplParser.BitwiseXorExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bitwiseXorExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.bitwiseAndExpression()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 136
                self.match(grammar_gplParser.BIT_XOR)
                self.state = 137
                self.bitwiseAndExpression()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BitwiseAndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalityExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.EqualityExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.EqualityExpressionContext,i)


        def BIT_AND(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.BIT_AND)
            else:
                return self.getToken(grammar_gplParser.BIT_AND, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_bitwiseAndExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBitwiseAndExpression" ):
                listener.enterBitwiseAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBitwiseAndExpression" ):
                listener.exitBitwiseAndExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitwiseAndExpression" ):
                return visitor.visitBitwiseAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def bitwiseAndExpression(self):

        localctx = grammar_gplParser.BitwiseAndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bitwiseAndExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.equalityExpression()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 144
                self.match(grammar_gplParser.BIT_AND)
                self.state = 145
                self.equalityExpression()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.RelationalExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.RelationalExpressionContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.EQ)
            else:
                return self.getToken(grammar_gplParser.EQ, i)

        def NE(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.NE)
            else:
                return self.getToken(grammar_gplParser.NE, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_equalityExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpression" ):
                listener.enterEqualityExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpression" ):
                listener.exitEqualityExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpression" ):
                return visitor.visitEqualityExpression(self)
            else:
                return visitor.visitChildren(self)




    def equalityExpression(self):

        localctx = grammar_gplParser.EqualityExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_equalityExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.relationalExpression()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23 or _la==24:
                self.state = 152
                _la = self._input.LA(1)
                if not(_la==23 or _la==24):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 153
                self.relationalExpression()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shiftExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_gplParser.ShiftExpressionContext)
            else:
                return self.getTypedRuleContext(grammar_gplParser.ShiftExpressionContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.LT)
            else:
                return self.getToken(grammar_gplParser.LT, i)

        def LE(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.LE)
            else:
                return self.getToken(grammar_gplParser.LE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.GT)
            else:
                return self.getToken(grammar_gplParser.GT, i)

        def GE(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_gplParser.GE)
            else:
                return self.getToken(grammar_gplParser.GE, i)

        def getRuleIndex(self):
            return grammar_gplParser.RULE_relationalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpression" ):
                listener.enterRelationalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpression" ):
                listener.exitRelationalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpression" ):
                return visitor.visitRelationalExpression(self)
            else:
                return visitor.visitChildren(self)




    def relationalExpression(self):
